# EnPAC_CPN_2021

./: CMakeLists.txt  CPN.cpp  CPN.h  CPN_Product.cpp  CPN_Product.h  CPN_RG.cpp  CPN_RG.h  base.h  criteria.cpp  expression.cpp  expression.h  main.cpp  sort.cpp  sort.h
BA/: Syntax_Tree.cpp  Syntax_Tree.h  VWAA.h  atomic.cpp  atomic.h  buchi.cpp  buchi.h  set.h
CModels/: model.pnml  model10.pnml  model12.pnml
